[package]
name = "ucli"
version = "0.1.0"
edition = "2021"
authors = ["Chrys Rakotonimanana <chrysrakk@gmail.com>"]
description = "A command line interface for CLI applications"
license = "MIT OR Apache-2.0"
keywords = ["cli", "ucli", "utils", "select", "input", "prompt"]

[dependencies]
crossterm = "0.25.0"
