[package]
name = "ucli"
version = "0.2.0"
edition = "2021"
authors = ["Chrys Rakotonimanana <chrysrakk@gmail.com>"]
description = "A command line interface for CLI applications"
license = "MIT OR Apache-2.0"
keywords = ["cli", "ucli", "utils", "select", "prompt"]
readme = "README.md"
homepage = "https://github.com/chrys-elrak/ucli"
repository = "https://github.com/chrys-elrak/ucli"
categories = ["command-line-utilities", "text-manipulation", "terminal", "cli", "console"]

[dependencies]
crossterm = "0.25.0"

[[example]]
name = "fruts"
path = "examples/fruts.rs"